tests/pos/i19806/J_SCALA_ONLY.java
package p;

public class J<T> {

  public J() {}

  public static Module$ module2() {
    return p.Module$.MODULE$;
  }

  public static p.Module$ module() {
    return p.Module$.MODULE$;
  }

  public static Module.InnerModule$ innermodule2() {
    return p.Module.InnerModule$.MODULE$;
  }

  public static p.Module.InnerModule$ innermodule() {
    return p.Module.InnerModule$.MODULE$;
  }
}
