tests/neg/i533/JA.java
class JA {
  public static <T> T get(T[] arr) {
    return arr[0];
  }

  public static <T> T getVarargs(T ...arr) {
    return arr[0];
  }
}
